fixed support of used_tables() and const_item() in subqueries (BUG#1444)